--- a/css/style.css
+++ b/css/style.css
@@ -6,8 +6,25 @@
     object-fit: cover;
 
 }
+html {
+    font-size: 100%;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.active {
+    background-color: #4CAF50;
+    color: white;
+}
+
 header {
+    display: flex;
     width: 100%;
+    background-color: blue;
+}
+header .logo {
+    width: 20%;
+    height: 100%;
+    background-color: black;
 }
 nav {
     display: flex;
