--- a/css/style.css
+++ b/css/style.css
@@ -1,39 +1,50 @@
 body {
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 header {
-    display: flex;
-    background-color: black;
-    justify-content: space-evenly;
+  display: flex;
+  background-color: black;
+  justify-content: space-between;
+  background-color: #ee1c25;
 }
-.Main-nav-button {
-    padding: 1em;
-    display: inline-block;
 
+.Main-nav-buttons {
+  display: flex;
+  justify-content: space-evenly;
+  flex-grow: 2;
+}
+
+.Main-nav-flag {
+  width: 10%;
+}
+
+.Main-nav-button {
+  padding: 1em;
+  display: inline-block;
 }
 
 .Main-nav-button a {
-    position: relative;
-    color: #fff;
-    background-color: black;
-    text-decoration: none;
-  }
-  
-  .Main-nav-button:after {
-    content: '';
-    position: absolute;
-    width: 100%;
-    transform: scaleX(0) scaleY(1);
-    height: 3px;
-    bottom: 2px;
-    left: 1px;
-    background-color: #fff;
-    transform-origin: bottom left;
-    transition: transform 0.25s ease-in-out;
-  }
-  
-  .Main-nav-button:hover:after {
-    transform: scaleX(1);
-    transform-origin: bottom left;
-  }
+  position: relative;
+  color: #fff;
+  background-color: #ee1c25;
+  text-decoration: none;
+}
+
+.Main-nav-button:after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  transform: scaleX(0) scaleY(1);
+  height: 3px;
+  bottom: 2px;
+  left: 1px;
+  background-color: #fff;
+  transform-origin: bottom left;
+  transition: transform 0.25s ease-in-out;
+}
+
+.Main-nav-button:hover:after {
+  transform: scaleX(1);
+  transform-origin: bottom left;
+}
