--- a/css/style.css
+++ b/css/style.css
@@ -1,103 +1,113 @@
-
 html {
-    font-size: 1vmin;  /* Vad tycker ni om att använda vmin för huvud font-size istället för 16px. vmin gör att font-size är 2.5% av den minsta längden av viewporten. */
+    font-size: calc( calc(4vh + 4vw + 2vmin) / 5);
+    
+    /* Vad tycker ni om att använda vmin för huvud font-size istället för 16px. vmin gör att font-size är 2.5% av den minsta längden av viewporten. */
 
     font-family: Arial, Helvetica, sans-serif;
     box-sizing: border-box;
 }
+
 body {
-    min-width: 250px;
+    min-width: 320px;
+    background-color: #333;
+    --redColor: #EE1C25;
 }
 
-.active {
+.Active {
     background-color: #4CAF50;
     color: white;
 }
 
-header {
-    display: flex;
-    width: 100%;
-    max-height: 20vh;
-    height: fit-content;
-    justify-content: center;
-    background-color: #EE1C25;
-    position: relative;
-}
+
+
 * h1 {
     /* font-size: 15vmin; */
     font-size: 3em;
 }
+
 * h2 {
     /* font-size: 10vmin; */
     font-size: 2em;
 }
+
 * p {
     /* font-size: 5vmin; */
     font-size: 1em;
 }
 
+
+
+
+
+
+
+
+
+
+
+
+
 /* ---------------- Header -------------- */
 
-.logo img {
-    height: 10vmin;
-    top: 0;
-    left: 0;
-    filter: brightness(0) invert(1);
-    display: block;
-}
 .logo {
-    display: flex;
-    align-items: center;
-}
-.logo figcaption  {
-    font-size: 5em;
-    font-weight: bold;
-    color: white;
-    text-shadow: 2px 2px #000000; 
-}
-
-header nav {
-    margin: auto;
-    display: flex;
-    background-color: black;
-    font-size: 1.5em;
-    font-weight: bold;
-    color: #333;
-    align-content: center;
-    height: 100%;
-}
-
-.Main-nav-button {
-    padding: 1em;
-    max-height: 100%;
-    display: inline-block;
-    height: 100%;
-}
-
-.Main-nav-button a {
-    position: relative;
-    color: #fff;
-    background-color: black;
-    text-decoration: none;
-}
-
-.Main-nav-button a:after {
-    content: '';
-    position: absolute;
     width: 100%;
-    transform: scaleX(0) scaleY(1);
-    height: 3px;
-    bottom: 0;
-    left: 0;
-    background-color: #fff;
-    transform-origin: bottom left;
-    transition: transform 0.25s ease-in-out;
+    position: relative;
+
+    height: var(--headerPadding);
+    overflow: hidden;
+}
+/* Add a black background color to the top navigation */
+.topnav {
+    height: 7rem;
+    background-color: var(--redColor);
+    overflow: hidden;
+  }
+  
+  /* Style the links inside the navigation bar */
+  .topnav a {
+    float: right;
+    /* width: 2em; */
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 1em;
+    text-decoration: none;
+    background-color: var(--redColor);
+    font-size: 2.3em;
+    height: 100%;
 }
 
-.Main-nav-button a:hover:after {
-    transform: scaleX(1);
-    transform-origin: bottom left;
+  /* Change the color of links on hover */
+  .topnav a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+  
+  /* Add an active class to highlight the current page */
+  .topnav a.active {
+    color: white;
+  }
+  
+  /* Hide the link that should open and close the topnav on small screens */
+  .topnav .icon {
+    display: none;
 }
+#homeBtn {
+    padding: 0;
+    padding-bottom: 0;
+    float: left;
+}
+.topnav a img {
+    aspect-ratio: 3/2;
+    margin-bottom: 0;
+    height: 100%;
+}
+
+
+
+
+
+
 
 /* ---------- Header slut --------------- */
 
@@ -107,7 +117,7 @@ article {
     padding: 1em;
     min-width: 50vw;
     color: white;
-    font-size: 2rem;
+    font-size: 2em;
 }
 
 
@@ -119,16 +129,20 @@ footer {
     color: white;
     height: max-content;
 }
+
 footer h1 {
     font-size: 2em;
     font-weight: bold;
 }
+
 footer h2 {
     font-size: 1em;
 }
+
 footer p {
     font-size: 1em;
 }
+
 /* ----------- Footer Slut ---------- */
 
 
@@ -156,7 +170,7 @@ footer p {
 .sightlink {
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     display: block;
-    flex-basis: 30%;
+    flex-basis: 90%;
     height: 90%;
     transform: scale(1);
     transition: transform 0.2s ease-out;
@@ -171,7 +185,7 @@ footer p {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    min-height: 300px;
+    min-height: 120px;
 }
 
 .sightlink:hover {
@@ -188,21 +202,6 @@ footer p {
     display: block;
     background-color: #333;
 
-}
-/* ---------------- Sights sektion Slut --------------------- */
-
-.scroll-to-topbtn {
-    position: fixed;
-    bottom: 1em;
-    right: 1em;
-    --scrollbtn-size: 5em;
-    width: var(--scrollbtn-size);
-    height: var(--scrollbtn-size);
-    background-color: #333;
-    color: white;
-
-    padding: 0.5em;
-    cursor: pointer;
 }
 
 #sight-card-1 a {
@@ -224,27 +223,113 @@ footer p {
     background-origin: content-box;
 }
 
+/* ---------------- Sights sektion Slut --------------------- */
 
+.scroll-to-topbtn {
+    position: fixed;
+    bottom: 1em;
+    right: 1em;
+    --scrollbtn-size: 5em;
+    width: var(--scrollbtn-size);
+    height: var(--scrollbtn-size);
+    background-color: #333;
+    color: white;
 
-@media screen and (max-width: 800px) {
-    .sights-container {
-        flex-direction: row;
-        /* flex-wrap: nowrap; */
-        
-    }
-    html {
-        font-size: 0.7rem;
-    }
-    header {
-        margin: 0;
-    }
-    #btnContainer {
-        display: none;
-    }
-    .sightlink {
-        flex-basis: 90%;
-        height: 90%;
-    }
-
+    padding: 0.1vmin;
+    cursor: pointer;
 }
 
+
+
+/* /Sigths Layout */
+.SightSection {
+    background-color: #222;
+}
+
+.SightSection article {
+    background-color: #222;
+    padding: 1em;
+    min-width: 50vw;
+    color: white;
+    font-size: 2.5rem;
+    display: flex;
+    gap: 2em;
+    flex-direction: column;
+}
+
+.SightSection article div h1 {
+    color: white;
+    flex: 0 0 100%;
+    font-size: 2em;
+    line-height: normal;
+    margin-bottom: 0.5em;
+}
+
+.SightSection article div p {
+    margin-bottom: 1em;
+}
+
+.SightSection article img, .SightSection article div {
+    width: 100%;
+}
+
+/* /Sigths Layout slut */
+
+
+@media screen and (min-width: 426px) {
+
+    .SightSection article {
+        flex-direction: row;
+    }
+
+    .SightSection article img {
+        width: 50%;
+        height: 50%;
+    }
+
+    .SightSection article div {
+        width: 50%;
+    }
+
+    .SightSection:nth-child(3n+1) article {
+        flex-direction: row-reverse;
+    }
+    
+    html {
+        font-size: calc(calc(4vh + 4vw + 2vmin) / 12.5);
+    }
+
+    .sightlink {
+        flex-basis: 30%;
+        height: 90%;
+    }
+}
+
+
+
+
+
+/* W3: https://www.w3schools.com/howto/howto_js_topnav_responsive.asp */
+/* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
+@media screen and (max-width: 600px) {
+    .topnav a:not(:first-child) {display: none;}
+    .topnav a.icon {
+      float: right;
+      display: block;
+    }
+  }
+  
+  /* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
+  @media screen and (max-width: 600px) {
+    .topnav.responsive {position: relative;}
+    .topnav.responsive a.icon {
+      position: absolute;
+      right: 0;
+      top: 0;
+    }
+    .topnav.responsive a {
+      float: none;
+      display: block;
+      text-align: left;
+    }
+  }
