Hopningsvis är headern klar och responsiv Den är inte riktigt som figma för att jag inte kunde få det att fungera

--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,15 @@
 html {
-    font-size: calc( calc(4vh + 4vw + 2vmin) / 5);
-    
+    font-size: calc(calc(4vh + 4vw + 2vmin) / 15);
+
     /* Vad tycker ni om att använda vmin för huvud font-size istället för 16px. vmin gör att font-size är 2.5% av den minsta längden av viewporten. */
 
     font-family: Arial, Helvetica, sans-serif;
     box-sizing: border-box;
+    
 }
 
 body {
-    min-width: 320px;
+    min-width: 200px;
     background-color: #333;
     --redColor: #EE1C25;
 }
@@ -45,7 +46,34 @@ body {
 
 
 
+.MainThumbnail {
+    display: flex;
+    position: relative;
+    width: 100%;
+    height: 40vh;
+    background-color: #333;
+    position: relative;
+    background-image: url(https://live.staticflickr.com/65535/51113116493_34fc3759ae_b.jpg);
+    background-position: 0% 80%;
+    justify-content: center;
+    align-items: center;
+    z-index: 5;
+}
 
+.MainThumbnail div {
+
+    backdrop-filter: blur(2px);
+    background-color: rgba(0, 0, 0, 0.2);
+    padding: 2em;
+}
+
+.MainThumbnail div h1 {
+    /* font-size: 2em; */
+    line-height: 1.5em;
+    text-align: center;
+
+    /* background-color: rgba(0,0,0,0.5); */
+}
 
 /* ---------------- Header -------------- */
 
@@ -56,17 +84,17 @@ body {
     height: var(--headerPadding);
     overflow: hidden;
 }
+
 /* Add a black background color to the top navigation */
 .topnav {
-    height: 7rem;
+    height: 7em;
     background-color: var(--redColor);
     overflow: hidden;
-  }
-  
-  /* Style the links inside the navigation bar */
-  .topnav a {
-    float: right;
-    /* width: 2em; */
+}
+
+/* Style the links inside the navigation bar */
+.topnav a {
+    float: left;
     display: block;
     color: #f2f2f2;
     text-align: center;
@@ -74,34 +102,41 @@ body {
     text-decoration: none;
     background-color: var(--redColor);
     font-size: 2.3em;
+    border-top-left-radius: 2em;
+    border-top-right-radius: 2em;
     height: 100%;
+    text-transform: capitalize;
+}
+.topnav a.icon {
+    height: auto;
 }
 
-  /* Change the color of links on hover */
-  .topnav a:hover {
-    background-color: #ddd;
-    color: black;
-  }
-  
-  /* Add an active class to highlight the current page */
-  .topnav a.active {
+/* Change the color of links on hover */
+.topnav a:hover {
+    background-color: #c41921;
+}
+
+/* Add an active class to highlight the current page */
+.topnav a.active {
+    background-color: #c41921;
     color: white;
-  }
-  
-  /* Hide the link that should open and close the topnav on small screens */
-  .topnav .icon {
+}
+
+/* Hide the link that should open and close the topnav on small screens */
+.topnav .icon {
     display: none;
 }
+
 #homeBtn {
     padding: 0;
     padding-bottom: 0;
-    float: left;
+    background: url(/img/Flag_of_Hong_Kong2.svg) no-repeat center;
+    background-size: contain;
+    width: 5em;
+    height: inherit;
+
 }
-.topnav a img {
-    aspect-ratio: 3/2;
-    margin-bottom: 0;
-    height: 100%;
-}
+
 
 
 
@@ -114,10 +149,13 @@ body {
 
 article {
     background-color: green;
-    padding: 1em;
+    /* padding: 1em; */
     min-width: 50vw;
     color: white;
     font-size: 2em;
+}
+article>h1::after {
+    content: "Desktop css.";
 }
 
 
@@ -128,6 +166,7 @@ footer {
     background-color: #333333;
     color: white;
     height: max-content;
+    font-size: 2rem;
 }
 
 footer h1 {
@@ -170,8 +209,8 @@ footer p {
 .sightlink {
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     display: block;
-    flex-basis: 90%;
-    height: 90%;
+    flex-basis: 30%;
+    height: 100%;
     transform: scale(1);
     transition: transform 0.2s ease-out;
 }
@@ -185,7 +224,7 @@ footer p {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    min-height: 120px;
+    min-height: calc(calc(20vh + 20vw + 50vmin) / 3);
 }
 
 .sightlink:hover {
@@ -247,14 +286,18 @@ footer p {
 }
 
 .SightSection article {
-    background-color: #222;
+    background-color: #292929;
     padding: 1em;
     min-width: 50vw;
     color: white;
     font-size: 2.5rem;
     display: flex;
     gap: 2em;
-    flex-direction: column;
+    flex-direction: row;
+
+}
+.SightSection:nth-of-type(even) article {
+    flex-direction: row-reverse;
 }
 
 .SightSection article div h1 {
@@ -270,40 +313,9 @@ footer p {
 }
 
 .SightSection article img, .SightSection article div {
-    width: 100%;
+    width: 50%;
 }
 
-/* /Sigths Layout slut */
-
-
-@media screen and (min-width: 426px) {
-
-    .SightSection article {
-        flex-direction: row;
-    }
-
-    .SightSection article img {
-        width: 50%;
-        height: 50%;
-    }
-
-    .SightSection article div {
-        width: 50%;
-    }
-
-    .SightSection:nth-child(3n+1) article {
-        flex-direction: row-reverse;
-    }
-    
-    html {
-        font-size: calc(calc(4vh + 4vw + 2vmin) / 12.5);
-    }
-
-    .sightlink {
-        flex-basis: 30%;
-        height: 90%;
-    }
-}
 
 
 
@@ -311,25 +323,88 @@ footer p {
 
 /* W3: https://www.w3schools.com/howto/howto_js_topnav_responsive.asp */
 /* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
-@media screen and (max-width: 600px) {
-    .topnav a:not(:first-child) {display: none;}
+/* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
+@media screen and (max-width: 426px) {
+    
+    article>h1::after {
+        content: "mobile css.";
+
+    }
+    .topnav a:not(:first-child) {
+        display: none;
+    }
+
     .topnav a.icon {
-      float: right;
-      display: block;
+        float: right;
+        display: block;
+        background-color: #333;
+        z-index: 2;
+        height: 100%;
     }
-  }
-  
-  /* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
-  @media screen and (max-width: 600px) {
-    .topnav.responsive {position: relative;}
+    .topnav {
+        font-size: 2em;
+    }
+    .topnav.responsive {
+        position: relative;
+        height: 100%;
+    }
+    
     .topnav.responsive a.icon {
-      position: absolute;
-      right: 0;
-      top: 0;
+        height: 1.03em;
+        position: absolute;
+        right: 0;
+        top: 0;
     }
+
     .topnav.responsive a {
-      float: none;
-      display: block;
-      text-align: left;
+        float: none;
+        display: block;
+        text-align: left;
+        color: white;
+        background-color: #333;
     }
-  }
+    .topnav.responsive a.active {
+        background-color: #555;
+    }
+    .topnav a {
+        z-index: 1;
+        border-radius: 0;
+    }
+    .topnav a:hover {
+        background-color: #555;
+        color: white;
+    }
+
+    .topnav.responsive #homeBtn {
+        float: none;
+        height: 3em;
+        margin: 0;
+    }
+
+    .sightlink {
+        flex-basis: 85%;
+
+    }
+
+    .sights-container {
+        gap: 5em;
+    }
+    .MainThumbnail {
+        height: 20vh;
+    }
+}
+
+
+
+@media screen and (max-width: 500px) {
+    .SightSection article img, .SightSection article div {
+        width: 100%;
+    }
+    .SightSection article {
+        flex-direction: column;
+    }
+    .SightSection:nth-of-type(even) article {
+        flex-direction: column;
+    }
+    
+}
