--- a/css/style.css
+++ b/css/style.css
@@ -191,6 +191,23 @@ footer p {
 }
 /* ---------------- Sights sektion Slut --------------------- */
 
+
+
+
+
+/* ---------------- Culture sektion --------------------- */
+
+
+
+
+
+
+
+/* ---------------- Culture sektion Slut --------------------- */
+
+
+
+
 .scroll-to-topbtn {
     position: fixed;
     bottom: 1em;
