--- a/css/style.css
+++ b/css/style.css
@@ -284,7 +284,24 @@ footer p {
 .trads-top {
   display: flex;
   width: 100%;
-  flex-direction: column;
+  height: 40vh;
+  /* flex-direction: column; */
+  justify-content: center;
+  align-items: center;
+  background-image: url(../traditions/img/dragon.jpg);
+  background-size: cover;
+  background-position: center 25%;
+  /* padding-bottom: 20rem; */
+}
+
+.trads-top div {
+  display: block;
+  /* display: flex;
+  flex-direction: column; */
+  text-align: center;
+  backdrop-filter: blur(2px);
+  background-color: rgba(255, 255, 255, 0.5);
+  width: 80%;
 }
 
 .trads-title {
@@ -297,7 +314,7 @@ footer p {
   justify-content: space-between;
 }
 
-.trads-article div div{
+.trads-article div div {
   display: block;
 }
 
@@ -306,8 +323,9 @@ footer p {
 }
 
 .trads-article figure {
+  float: right;
   width: 150%;
-  font-size: 0.8em;
+  font-size: 0.7em;
 }
 
 .trads-reference {
@@ -315,20 +333,20 @@ footer p {
   margin: 0;
 }
 
-.trads-tin-hau figure{
+.trads-tin-hau figure {
   width: 50%;
 }
 
-.trads-tin-hau figure img{
+.trads-tin-hau figure img {
   width: 100%;
 }
 
-.trads-boat figure{
+.trads-boat figure {
   width: 100%;
   margin-top: 4rem;
 }
 
-.trads-boat figure img{
+.trads-boat figure img {
   width: 100%;
 }
 
