--- a/css/style.css
+++ b/css/style.css
@@ -280,6 +280,7 @@ footer p {
   background-color: white;
   color: black;
   /* width: 90%; */
+  margin-top: 20rem;
 }
 .trads-top {
   display: flex;
@@ -309,10 +310,10 @@ footer p {
   margin: 0 auto;
 }
 
-.trads-article div {
+/* .trads-article div {
   display: flex;
   justify-content: space-between;
-}
+} */
 
 .trads-article div div {
   display: block;
@@ -324,8 +325,11 @@ footer p {
 
 .trads-article figure {
   float: right;
-  width: 150%;
+  width: 10%;
   font-size: 0.7em;
+
+  float: right;
+  min-width: 200px;
 }
 
 .trads-reference {
@@ -334,7 +338,8 @@ footer p {
 }
 
 .trads-tin-hau figure {
-  width: 50%;
+  width: 5%;
+  min-width: 150px !important;
 }
 
 .trads-tin-hau figure img {
@@ -342,7 +347,7 @@ footer p {
 }
 
 .trads-boat figure {
-  width: 100%;
+  width: 30%;
   margin-top: 4rem;
 }
 
